--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,29 +1,27 @@
-
-
-name: CICD pipeline
- 
+name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main" ]
-  
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  compile :
-
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '17'
         distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+        java-version: '17'
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    - name: Install Playwright Browsers
+      run: mvn exec:java -e -Dexec.mainClass=com.microsoft.playwright.CLI -Dexec.args="install --with-deps"
+
+    - name: Build with Maven
+      run: mvn clean test
